Fixed settings and added visibility restrictions (#1675)

--- a/modules/fbs-core/web/src/app/page-components/course-detail/group-selection/group-selection.component.scss
+++ b/modules/fbs-core/web/src/app/page-components/course-detail/group-selection/group-selection.component.scss
@@ -17,6 +17,13 @@ td {
   text-align: left;
 }
 
-button {
+.invisible {
+  font-weight: bold;
+  color: #cccccc;
+  padding: 5px;
+}
+
+.selection-button {
+  float: right;
   margin-top: 10px;
 }
