--- a/modules/fbs-core/web/src/app/page-components/group-detail/group-detail.component.scss
+++ b/modules/fbs-core/web/src/app/page-components/group-detail/group-detail.component.scss
@@ -19,5 +19,6 @@ app-menu-bar mat-icon {
 .kanban-button mat-icon {
   color: $cPrimary;
   transform: scale(10);
-  margin-top: 100px;
+  margin-top: 150px;
+  margin-left: 80px;
 }
